# GIGA

./: .gitignore  package.xml  requirements.txt  setup.py
data/models/: giga_packed.pt
scripts/: clean_balance_data.py  construct_dataset_parallel.py  convonet_setup.py  eval_geometry_voxel.py  generate_data_parallel.py  render_rollouts_nvisii.py  save_occ_data_parallel.py  sim_grasp_multiple.py  sim_grasp_save_scene.py  train_giga.py  train_giga_aff.py  train_giga_geo.py  train_vgn.py
src/giga/: baselines.py  dataset.py  dataset_voxel.py  dataset_voxel_occ.py  detection.py  detection_implicit.py  grasp_sampler.py  io.py  networks.py  perception.py  simulation.py
src/giga/ConvONets/: common.py  config.py  eval.py
src/giga/ConvONets/conv_onet/: __init__.py  config.py  generation.py  training.py
src/giga/ConvONets/conv_onet/models/: __init__.py  decoder.py
src/giga/ConvONets/data/: __init__.py  core.py  fields.py
src/giga/ConvONets/encoder/: __init__.py  pointnet.py  voxels.py
src/giga/ConvONets/utils/: binvox_rw.py  mesh.py  visualize.py  voxels.py
src/giga/ConvONets/utils/libmcubes/: __init__.py  mcubes.cpp
src/giga/ConvONets/utils/libsimplify/: simplify_mesh.cpp
src/giga/experiments/: clutter_removal.py  clutter_removal_single.py
src/giga/utils/: btsim.py  implicit.py  saver.py  visual.py
